# imagecodecs_build

./: .gitignore  .gitmodules  Readme.md  aarch64.patch  azure-pipelines.yaml  imagecodecs.patch  pyproject.toml  requirements.txt  requirements_azure.txt  requirements_test.txt
.circleci/: config.yml
build_utils/: Dockerfile  Dockerfile_2014  Dockerfile_2_28  Dockerfile_i686  Dockerfile_manylinux2014_aarch64  Dockerfile_manylinux2014_i686  Dockerfile_manylinux2014_x86_64  Dockerfile_pypy  Makefile_jxrlib  build_libomp.sh  build_libraries.sh  bzip2.patch  cfitsio.patch  docker_2014_64.sh  docker_2_28_64.sh  docker_64.sh  docker_i686.sh  docker_manylinux2014_aarch64.sh  docker_manylinux2014_i686.sh  docker_manylinux2014_x86_64.sh  docker_prepare.sh  docker_prepare_2014.sh  docker_prepare_manylinux2014_aarch64.sh  docker_prepare_manylinux2014_i686.sh  docker_prepare_manylinux2014_x86_64.sh  docker_pypy.sh  download_libraries.sh  fix_macos_lib.sh  gettext_install.sh  giflib.patch  highway.patch  install_cmake.sh  install_nasm.sh  install_ninja.sh  jxrlib.patch  libaec.patch  libjpeg-turbo12.patch  rebuild_zfp.sh
build_utils/patch_dir/jxrlib/: Makefile
build_utils/patch_dir/lerc/: CMakeLists.txt
